<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Settings" >

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textViewAuto"
        android:layout_marginTop="34dp"
        android:onClick="clicked_start"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonStart"
        android:layout_marginRight="22dp"
        android:onClick="clicked_stop"
        android:text="@string/stop" />

    <TextView
        android:id="@+id/textViewAuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonStart"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="35dp"
        android:text="@string/autoReresh" />

    <Spinner
        android:id="@+id/spinnerTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonStart"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/textViewAuto"
        android:entries="@array/time_arrays"
        android:prompt="@string/refresh" />

    <Spinner
        android:id="@+id/spinnerCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinnerTime"
        android:layout_centerVertical="true"
        android:entries="@array/city_arrays"
        android:prompt="@string/city" />

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAuto"
        android:layout_centerVertical="true"
        android:text="@string/selectCity" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/spinnerCity"
        android:layout_below="@+id/spinnerCity"
        android:layout_marginTop="40dp"
        android:text="@string/explain" />

</RelativeLayout>